HUST-CompilerPrinciple/lab3/parser.output
Nonterminals useless in grammar

    Arraylist


Terminals unused in grammar

    STRUCT
    SWITCH
    CASE
    DOT
    POUND
    COMMENT
    COMMENTBEGIN
    COMMENTEND
    VOID
    ASSIGNMENT
    SIZEOF
    SCANF
    PRINTF
    BACKLASH
    SINGLE_Q
    DOUBLE_Q
    DO
    EXT_DEF_LIST
    EXT_VAR_DEF
    FUNC_DEF
    FUNC_DEC
    EXT_DEC_LIST
    PARAM_LIST
    PARAM_DEC
    VAR_DEF
    DEC_LIST
    DEF_LIST
    COMP_STM
    STM_LIST
    EXP_STMT
    IF_THEN
    IF_THEN_ELSE
    FUNC_CALL
    ARGS
    FUNCTION
    PARAM
    ARG
    CALL
    LABEL
    GOTO
    JLT
    JLE
    JGT
    JGE
    EQ
    NEQ
    FOR_DEC
    ARRAY_LIST
    ARRAY_CALL


Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 Specifier: TYPE

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 VarDec: ID

   11 FuncDec: ID LP VarList RP
   12        | ID LP RP

   13 VarList: ParamDec
   14        | ParamDec COMMA VarList

   15 ParamDec: Specifier VarDec

   16 CompSt: LC DefList StmList RC

   17 StmList: %empty
   18        | Stmt StmList

   19 Stmt: Exp SEMI
   20     | CompSt
   21     | RETURN Exp SEMI
   22     | IF LP Exp RP Stmt
   23     | IF LP Exp RP Stmt ELSE Stmt
   24     | WHILE LP Exp RP Stmt
   25     | FOR LP ForDec RP Stmt
   26     | BREAK SEMI
   27     | CONTINUE SEMI
   28     | DEFAULT SEMI

   29 ForDec: Exp SEMI Exp SEMI Exp
   30       | SEMI Exp SEMI

   31 DefList: %empty
   32        | Def DefList

   33 Def: Specifier DecList SEMI

   34 DecList: Dec
   35        | Dec COMMA DecList

   36 Dec: VarDec
   37    | VarDec ASSIGNOP Exp

   38 Exp: Exp ASSIGNOP Exp
   39    | Exp AND Exp
   40    | Exp OR Exp
   41    | Exp RELOP Exp
   42    | Exp PLUS Exp
   43    | Exp MINUS Exp
   44    | Exp STAR Exp
   45    | Exp DIV Exp
   46    | LP Exp RP
   47    | MINUS Exp
   48    | NOT Exp
   49    | ID LP Args RP
   50    | ID LP RP
   51    | ID
   52    | INT
   53    | FLOAT
   54    | CHAR
   55    | STRING
   56    | Exp AUTOPLUS
   57    | Exp PLUSASSIGNOP Exp
   58    | Exp AUTOMINUS
   59    | Exp MINUSASSIGNOP Exp
   60    | Exp LB Exp RB
   61    | LB Args RB

   62 Args: Exp COMMA Args
   63     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 6
    INT <type_int> (258) 52
    ID <type_id> (259) 10 11 12 49 50 51
    RELOP <type_id> (260) 41
    TYPE <type_id> (261) 7
    CHAR <type_char> (262) 54
    STRING <type_string> (263) 55
    FLOAT <type_float> (264) 53
    LP (265) 11 12 22 23 24 25 46 49 50
    RP (266) 11 12 22 23 24 25 46 49 50
    LB (267) 60 61
    RB (268) 60 61
    LC (269) 16
    RC (270) 16
    SEMI (271) 4 6 19 21 26 27 28 29 30 33
    COMMA (272) 9 14 35 62
    STRUCT (273)
    SWITCH (274)
    CASE (275)
    DOT (276)
    DEFAULT (277) 28
    POUND (278)
    COMMENT (279)
    COMMENTBEGIN (280)
    COMMENTEND (281)
    VOID (282)
    ASSIGNMENT (283)
    SIZEOF (284)
    SCANF (285)
    PRINTF (286)
    BACKLASH (287)
    SINGLE_Q (288)
    DOUBLE_Q (289)
    BREAK (290) 26
    CONTINUE (291) 27
    PLUS (292) 42
    MINUS (293) 43 47
    STAR (294) 44
    DIV (295) 45
    ASSIGNOP (296) 37 38
    AND (297) 39
    OR (298) 40
    NOT (299) 48
    IF (300) 22 23
    ELSE (301) 23
    WHILE (302) 24
    RETURN (303) 21
    FOR (304) 25
    DO (305)
    PLUSASSIGNOP (306) 57
    MINUSASSIGNOP (307) 59
    AUTOPLUS (308) 56
    AUTOMINUS (309) 58
    EXT_DEF_LIST (310)
    EXT_VAR_DEF (311)
    FUNC_DEF (312)
    FUNC_DEC (313)
    EXT_DEC_LIST (314)
    PARAM_LIST (315)
    PARAM_DEC (316)
    VAR_DEF (317)
    DEC_LIST (318)
    DEF_LIST (319)
    COMP_STM (320)
    STM_LIST (321)
    EXP_STMT (322)
    IF_THEN (323)
    IF_THEN_ELSE (324)
    FUNC_CALL (325)
    ARGS (326)
    FUNCTION (327)
    PARAM (328)
    ARG (329)
    CALL (330)
    LABEL (331)
    GOTO (332)
    JLT (333)
    JLE (334)
    JGT (335)
    JGE (336)
    EQ (337)
    NEQ (338)
    FOR_DEC (339)
    ARRAY_LIST (340)
    ARRAY_CALL (341)
    UMINUS (342)
    LOWER_THEN_ELSE (343)


Nonterminals, with rules where they appear

    $accept (89)
        on left: 0
    program <ptr> (90)
        on left: 1
        on right: 0
    ExtDefList <ptr> (91)
        on left: 2 3
        on right: 1 3
    ExtDef <ptr> (92)
        on left: 4 5 6
        on right: 3
    Specifier <ptr> (93)
        on left: 7
        on right: 4 5 15 33
    ExtDecList <ptr> (94)
        on left: 8 9
        on right: 4 9
    VarDec <ptr> (95)
        on left: 10
        on right: 8 9 15 36 37
    FuncDec <ptr> (96)
        on left: 11 12
        on right: 5
    VarList <ptr> (97)
        on left: 13 14
        on right: 11 14
    ParamDec <ptr> (98)
        on left: 15
        on right: 13 14
    CompSt <ptr> (99)
        on left: 16
        on right: 5 20
    StmList <ptr> (100)
        on left: 17 18
        on right: 16 18
    Stmt <ptr> (101)
        on left: 19 20 21 22 23 24 25 26 27 28
        on right: 18 22 23 24 25
    ForDec <ptr> (102)
        on left: 29 30
        on right: 25
    DefList <ptr> (103)
        on left: 31 32
        on right: 16 32
    Def <ptr> (104)
        on left: 33
        on right: 32
    DecList <ptr> (105)
        on left: 34 35
        on right: 33 35
    Dec <ptr> (106)
        on left: 36 37
        on right: 34 35
    Exp <ptr> (107)
        on left: 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
        on right: 19 21 22 23 24 29 30 37 38 39 40 41 42 43 44 45 46 47 48 56 57 58 59 60 62 63
    Args <ptr> (108)
        on left: 62 63
        on right: 49 61 62


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    program     go to state 3
    ExtDefList  go to state 4
    ExtDef      go to state 5
    Specifier   go to state 6


State 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 7


State 2

    7 Specifier: TYPE .

    $default  reduce using rule 7 (Specifier)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


State 5

    3 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 9
    ExtDef      go to state 5
    Specifier   go to state 6


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 10

    ExtDecList  go to state 11
    VarDec      go to state 12
    FuncDec     go to state 13


State 7

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 10

   10 VarDec: ID .
   11 FuncDec: ID . LP VarList RP
   12        | ID . LP RP

    LP  shift, and go to state 14

    $default  reduce using rule 10 (VarDec)


State 11

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 15


State 12

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList

    COMMA  shift, and go to state 16

    $default  reduce using rule 8 (ExtDecList)


State 13

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 17

    CompSt  go to state 18


State 14

   11 FuncDec: ID LP . VarList RP
   12        | ID LP . RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 19

    Specifier  go to state 20
    VarList    go to state 21
    ParamDec   go to state 22


State 15

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 16

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 23

    ExtDecList  go to state 24
    VarDec      go to state 12


State 17

   16 CompSt: LC . DefList StmList RC

    TYPE  shift, and go to state 2

    $default  reduce using rule 31 (DefList)

    Specifier  go to state 25
    DefList    go to state 26
    Def        go to state 27


State 18

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


State 19

   12 FuncDec: ID LP RP .

    $default  reduce using rule 12 (FuncDec)


State 20

   15 ParamDec: Specifier . VarDec

    ID  shift, and go to state 23

    VarDec  go to state 28


State 21

   11 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 29


State 22

   13 VarList: ParamDec .
   14        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 30

    $default  reduce using rule 13 (VarList)


State 23

   10 VarDec: ID .

    $default  reduce using rule 10 (VarDec)


State 24

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 25

   33 Def: Specifier . DecList SEMI

    ID  shift, and go to state 23

    VarDec   go to state 31
    DecList  go to state 32
    Dec      go to state 33


State 26

   16 CompSt: LC DefList . StmList RC

    INT       shift, and go to state 34
    ID        shift, and go to state 35
    CHAR      shift, and go to state 36
    STRING    shift, and go to state 37
    FLOAT     shift, and go to state 38
    LP        shift, and go to state 39
    LB        shift, and go to state 40
    LC        shift, and go to state 17
    DEFAULT   shift, and go to state 41
    BREAK     shift, and go to state 42
    CONTINUE  shift, and go to state 43
    MINUS     shift, and go to state 44
    NOT       shift, and go to state 45
    IF        shift, and go to state 46
    WHILE     shift, and go to state 47
    RETURN    shift, and go to state 48
    FOR       shift, and go to state 49

    $default  reduce using rule 17 (StmList)

    CompSt   go to state 50
    StmList  go to state 51
    Stmt     go to state 52
    Exp      go to state 53


State 27

   32 DefList: Def . DefList

    TYPE  shift, and go to state 2

    $default  reduce using rule 31 (DefList)

    Specifier  go to state 25
    DefList    go to state 54
    Def        go to state 27


State 28

   15 ParamDec: Specifier VarDec .

    $default  reduce using rule 15 (ParamDec)


State 29

   11 FuncDec: ID LP VarList RP .

    $default  reduce using rule 11 (FuncDec)


State 30

   14 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 20
    VarList    go to state 55
    ParamDec   go to state 22


State 31

   36 Dec: VarDec .
   37    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 56

    $default  reduce using rule 36 (Dec)


State 32

   33 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 57


State 33

   34 DecList: Dec .
   35        | Dec . COMMA DecList

    COMMA  shift, and go to state 58

    $default  reduce using rule 34 (DecList)


State 34

   52 Exp: INT .

    $default  reduce using rule 52 (Exp)


State 35

   49 Exp: ID . LP Args RP
   50    | ID . LP RP
   51    | ID .

    LP  shift, and go to state 59

    $default  reduce using rule 51 (Exp)


State 36

   54 Exp: CHAR .

    $default  reduce using rule 54 (Exp)


State 37

   55 Exp: STRING .

    $default  reduce using rule 55 (Exp)


State 38

   53 Exp: FLOAT .

    $default  reduce using rule 53 (Exp)


State 39

   46 Exp: LP . Exp RP

    INT     shift, and go to state 34
    ID      shift, and go to state 35
    CHAR    shift, and go to state 36
    STRING  shift, and go to state 37
    FLOAT   shift, and go to state 38
    LP      shift, and go to state 39
    LB      shift, and go to state 40
    MINUS   shift, and go to state 44
    NOT     shift, and go to state 45

    Exp  go to state 60


State 40

   61 Exp: LB . Args RB

    INT     shift, and go to state 34
    ID      shift, and go to state 35
    CHAR    shift, and go to state 36
    STRING  shift, and go to state 37
    FLOAT   shift, and go to state 38
    LP      shift, and go to state 39
    LB      shift, and go to state 40
    MINUS   shift, and go to state 44
    NOT     shift, and go to state 45

    Exp   go to state 61
    Args  go to state 62


State 41

   28 Stmt: DEFAULT . SEMI

    SEMI  shift, and go to state 63


State 42

   26 Stmt: BREAK . SEMI

    SEMI  shift, and go to state 64


State 43

   27 Stmt: CONTINUE . SEMI

    SEMI  shift, and go to state 65


State 44

   47 Exp: MINUS . Exp

    INT     shift, and go to state 34
    ID      shift, and go to state 35
    CHAR    shift, and go to state 36
    STRING  shift, and go to state 37
    FLOAT   shift, and go to state 38
    LP      shift, and go to state 39
    LB      shift, and go to state 40
    MINUS   shift, and go to state 44
    NOT     shift, and go to state 45

    Exp  go to state 66


State 45

   48 Exp: NOT . Exp

    INT     shift, and go to state 34
    ID      shift, and go to state 35
    CHAR    shift, and go to state 36
    STRING  shift, and go to state 37
    FLOAT   shift, and go to state 38
    LP      shift, and go to state 39
    LB      shift, and go to state 40
    MINUS   shift, and go to state 44
    NOT     shift, and go to state 45

    Exp  go to state 67


State 46

   22 Stmt: IF . LP Exp RP Stmt
   23     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 68


State 47

   24 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 69


State 48

   21 Stmt: RETURN . Exp SEMI

    INT     shift, and go to state 34
    ID      shift, and go to state 35
    CHAR    shift, and go to state 36
    STRING  shift, and go to state 37
    FLOAT   shift, and go to state 38
    LP      shift, and go to state 39
    LB      shift, and go to state 40
    MINUS   shift, and go to state 44
    NOT     shift, and go to state 45

    Exp  go to state 70


State 49

   25 Stmt: FOR . LP ForDec RP Stmt

    LP  shift, and go to state 71


State 50

   20 Stmt: CompSt .

    $default  reduce using rule 20 (Stmt)


State 51

   16 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 72


State 52

   18 StmList: Stmt . StmList

    INT       shift, and go to state 34
    ID        shift, and go to state 35
    CHAR      shift, and go to state 36
    STRING    shift, and go to state 37
    FLOAT     shift, and go to state 38
    LP        shift, and go to state 39
    LB        shift, and go to state 40
    LC        shift, and go to state 17
    DEFAULT   shift, and go to state 41
    BREAK     shift, and go to state 42
    CONTINUE  shift, and go to state 43
    MINUS     shift, and go to state 44
    NOT       shift, and go to state 45
    IF        shift, and go to state 46
    WHILE     shift, and go to state 47
    RETURN    shift, and go to state 48
    FOR       shift, and go to state 49

    $default  reduce using rule 17 (StmList)

    CompSt   go to state 50
    StmList  go to state 73
    Stmt     go to state 52
    Exp      go to state 53


State 53

   19 Stmt: Exp . SEMI
   38 Exp: Exp . ASSIGNOP Exp
   39    | Exp . AND Exp
   40    | Exp . OR Exp
   41    | Exp . RELOP Exp
   42    | Exp . PLUS Exp
   43    | Exp . MINUS Exp
   44    | Exp . STAR Exp
   45    | Exp . DIV Exp
   56    | Exp . AUTOPLUS
   57    | Exp . PLUSASSIGNOP Exp
   58    | Exp . AUTOMINUS
   59    | Exp . MINUSASSIGNOP Exp
   60    | Exp . LB Exp RB

    RELOP          shift, and go to state 74
    LB             shift, and go to state 75
    SEMI           shift, and go to state 76
    PLUS           shift, and go to state 77
    MINUS          shift, and go to state 78
    STAR           shift, and go to state 79
    DIV            shift, and go to state 80
    ASSIGNOP       shift, and go to state 81
    AND            shift, and go to state 82
    OR             shift, and go to state 83
    PLUSASSIGNOP   shift, and go to state 84
    MINUSASSIGNOP  shift, and go to state 85
    AUTOPLUS       shift, and go to state 86
    AUTOMINUS      shift, and go to state 87


State 54

   32 DefList: Def DefList .

    $default  reduce using rule 32 (DefList)


State 55

   14 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 14 (VarList)


State 56

   37 Dec: VarDec ASSIGNOP . Exp

    INT     shift, and go to state 34
    ID      shift, and go to state 35
    CHAR    shift, and go to state 36
    STRING  shift, and go to state 37
    FLOAT   shift, and go to state 38
    LP      shift, and go to state 39
    LB      shift, and go to state 40
    MINUS   shift, and go to state 44
    NOT     shift, and go to state 45

    Exp  go to state 88


State 57

   33 Def: Specifier DecList SEMI .

    $default  reduce using rule 33 (Def)


State 58

   35 DecList: Dec COMMA . DecList

    ID  shift, and go to state 23

    VarDec   go to state 31
    DecList  go to state 89
    Dec      go to state 33


State 59

   49 Exp: ID LP . Args RP
   50    | ID LP . RP

    INT     shift, and go to state 34
    ID      shift, and go to state 35
    CHAR    shift, and go to state 36
    STRING  shift, and go to state 37
    FLOAT   shift, and go to state 38
    LP      shift, and go to state 39
    RP      shift, and go to state 90
    LB      shift, and go to state 40
    MINUS   shift, and go to state 44
    NOT     shift, and go to state 45

    Exp   go to state 61
    Args  go to state 91


State 60

   38 Exp: Exp . ASSIGNOP Exp
   39    | Exp . AND Exp
   40    | Exp . OR Exp
   41    | Exp . RELOP Exp
   42    | Exp . PLUS Exp
   43    | Exp . MINUS Exp
   44    | Exp . STAR Exp
   45    | Exp . DIV Exp
   46    | LP Exp . RP
   56    | Exp . AUTOPLUS
   57    | Exp . PLUSASSIGNOP Exp
   58    | Exp . AUTOMINUS
   59    | Exp . MINUSASSIGNOP Exp
   60    | Exp . LB Exp RB

    RELOP          shift, and go to state 74
    RP             shift, and go to state 92
    LB             shift, and go to state 75
    PLUS           shift, and go to state 77
    MINUS          shift, and go to state 78
    STAR           shift, and go to state 79
    DIV            shift, and go to state 80
    ASSIGNOP       shift, and go to state 81
    AND            shift, and go to state 82
    OR             shift, and go to state 83
    PLUSASSIGNOP   shift, and go to state 84
    MINUSASSIGNOP  shift, and go to state 85
    AUTOPLUS       shift, and go to state 86
    AUTOMINUS      shift, and go to state 87


State 61

   38 Exp: Exp . ASSIGNOP Exp
   39    | Exp . AND Exp
   40    | Exp . OR Exp
   41    | Exp . RELOP Exp
   42    | Exp . PLUS Exp
   43    | Exp . MINUS Exp
   44    | Exp . STAR Exp
   45    | Exp . DIV Exp
   56    | Exp . AUTOPLUS
   57    | Exp . PLUSASSIGNOP Exp
   58    | Exp . AUTOMINUS
   59    | Exp . MINUSASSIGNOP Exp
   60    | Exp . LB Exp RB
   62 Args: Exp . COMMA Args
   63     | Exp .

    RELOP          shift, and go to state 74
    LB             shift, and go to state 75
    COMMA          shift, and go to state 93
    PLUS           shift, and go to state 77
    MINUS          shift, and go to state 78
    STAR           shift, and go to state 79
    DIV            shift, and go to state 80
    ASSIGNOP       shift, and go to state 81
    AND            shift, and go to state 82
    OR             shift, and go to state 83
    PLUSASSIGNOP   shift, and go to state 84
    MINUSASSIGNOP  shift, and go to state 85
    AUTOPLUS       shift, and go to state 86
    AUTOMINUS      shift, and go to state 87

    $default  reduce using rule 63 (Args)


State 62

   61 Exp: LB Args . RB

    RB  shift, and go to state 94


State 63

   28 Stmt: DEFAULT SEMI .

    $default  reduce using rule 28 (Stmt)


State 64

   26 Stmt: BREAK SEMI .

    $default  reduce using rule 26 (Stmt)


State 65

   27 Stmt: CONTINUE SEMI .

    $default  reduce using rule 27 (Stmt)


State 66

   38 Exp: Exp . ASSIGNOP Exp
   39    | Exp . AND Exp
   40    | Exp . OR Exp
   41    | Exp . RELOP Exp
   42    | Exp . PLUS Exp
   43    | Exp . MINUS Exp
   44    | Exp . STAR Exp
   45    | Exp . DIV Exp
   47    | MINUS Exp .
   56    | Exp . AUTOPLUS
   57    | Exp . PLUSASSIGNOP Exp
   58    | Exp . AUTOMINUS
   59    | Exp . MINUSASSIGNOP Exp
   60    | Exp . LB Exp RB

    LB  shift, and go to state 75

    $default  reduce using rule 47 (Exp)


State 67
